# webhook-to-fedora-messaging

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  README.md  Vagrantfile  config.example  config.toml  config.toml.example  logging.yaml.example  pyproject.toml  tox.ini
.github/workflows/: main.yml
.reuse/: dep5
.s2i/: environment  start.sh
changelog.d/: _template.md
devel/ansible/: playbook.yml
devel/ansible/roles/dev/files/: bashrc  config.toml  w2fm.cfg  w2fm.service
devel/ansible/roles/dev/tasks/: main.yml
devel/ansible/roles/dev/templates/: w2fm.cfg
devel/ansible/roles/oidc-register/defaults/: main.yml
devel/ansible/roles/oidc-register/tasks/: main.yml
docs/: conf.py  contributing.rst  index.rst  release_notes.md
tests/: conftest.py  test_cli.py  test_root.py
tests/data/: test.toml  w2fm-test.db
tests/test_message/: test_message_create.py
tests/test_message/fixtures/: headers_forgejo.json  headers_github.json  payload.json  payload_forgejo.json
tests/test_service/: test_service_create.py  test_service_get.py  test_service_list.py  test_service_lookup.py  test_service_refresh.py  test_service_revoke.py  test_service_update.py
tests/test_user/: test_user_create.py  test_user_get.py  test_user_lookup.py  test_user_search.py
webhook_to_fedora_messaging/: __init__.py  auth.py  cache.py  cli.py  config.py  crud.py  database.py  exceptions.py  fasjson.py  main.py  move.py  publishing.py  test.py
webhook_to_fedora_messaging/config/: __init__.py  defaults.py  logger.py  myconfig.py  standard.py
webhook_to_fedora_messaging/endpoints/: __init__.py  apikey.py  message.py  service.py  user.py  util.py
webhook_to_fedora_messaging/endpoints/models/: message.py  service.py  user.py
webhook_to_fedora_messaging/endpoints/parser/: __init__.py  base.py  forgejo.py  github.py  parser.py
webhook_to_fedora_messaging/migration_from_gh2fm/: create_issues.py  gh2fm.py  import_db.py  import_repo.py
webhook_to_fedora_messaging/migrations/: alembic.ini  env.py  script.py.mako
webhook_to_fedora_messaging/migrations/versions/: 0a094674504f_service_sent.py  4f1f49d72fa8_service_desc_can_be_null.py  6c01198723a8_multiple_users_for_services.py  7d4bba864a99_remove_user_uuid.py  initial.py
webhook_to_fedora_messaging/models/: __init__.py  apikey.py  owners.py  service.py  user.py  util.py
