[tool.poetry]
name = "webhook-to-fedora-messaging"
version = "0.1.0"
description = "Webhook to Fedora Messaging"

license = "AGPL-3.0-or-later"

authors = [
  "Fedora Infrastructure <admin@fedoraproject.org>"
]
keywords = [
  "fedora",
  "amqp"
]

readme = "README.md"
repository = "http://github.com/fedora-infra/webhook-to-fedora-messaging"
homepage = "http://github.com/fedora-infra/webhook-to-fedora-messaging"
documentation = "https://webhook-to-fedora-messaging.readthedocs.io"

include = [
    { path = "tox.ini", format = "sdist" },
    { path = "tests", format = "sdist" },
    { path = "docs", format = "sdist" },
    { path = "*.example", format = "sdist" },
]

classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: System :: Networking",
    "Topic :: System :: Monitoring",
]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy-helpers = ">=0.12.1"
webhook-to-fedora-messaging-messages = "^1.0.0"
fastapi = "^0.111.1 || ^0.112.0 || ^0.113.0 || ^0.114.0 || ^0.115.0"
asyncpg = {version = "^0.29.0 || ^0.30.0", optional = true}
uvicorn = {extras = ["standard"], version = "^0.30.5 || ^0.31.0 || ^0.32.0 || ^0.33.0"}
pydantic-settings = "^2.4.0"
aiosqlite = "^0.20.0"
authlib = "^1.3.1"
itsdangerous = "^2.2.0"
httpx = "^0.27.0 || ^0.28.0"
pyyaml = "^6.0.2"
backoff = "^2.2.1"
httpx-gssapi = "^0.3.1"
cashews = "^7.2.0"


[tool.poetry.group.dev.dependencies]
aiosqlite = "^0.20.0"
pytest = ">=7.0.0"
pytest-cov = ">=4.0.0"
black = ">=23.10.0"
ruff = ">=0.1.1"
coverage = {extras = ["toml"], version = ">=7.0.0"}
diff-cover = ">=8.0.0"
sphinx = ">=4.0"
myst-parser = ">=0.16"
liccheck = ">=0.6"
pre-commit = ">=2.13"
sphinxcontrib-napoleon = "*"
pytest-asyncio = "^0.23.8 || ^0.24.0 || ^0.25.0"


[tool.poetry.group.scripts.dependencies]
gidgethub = "^5.3.0"

[tool.poetry.extras]
deploy = ["uvicorn", "asyncpg"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "S", "B", "RUF"]
ignore = ["RUF012"]

[tool.ruff.lint.isort]
lines-after-imports = 2
order-by-type = false

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "E501"]
"webhook_to_fedora_messaging/__init__.py" = ["F401"]
"changelog.d/get-authors.py" = ["S602", "S603", "S607"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["webhook_to_fedora_messaging"]
concurrency = ["greenlet", "thread"]

[tool.coverage.paths]
source = ["webhook_to_fedora_messaging"]

[tool.coverage.report]
fail_under = 75
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    # Don't complain if tests don't hit defensive assertion code
    "raise AssertionError",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
omit = [
    "webhook_to_fedora_messaging/__init__.py",
    "webhook_to_fedora_messaging/migrations/env.py",
    "webhook_to_fedora_messaging/migration_from_gh2fm/*",
    "tests/*",
]

[tool.towncrier]
package = "webhook-to-fedora-messaging"
filename = "docs/release_notes.md"
directory = "changelog.d"
start_string = "<!-- towncrier release notes start -->\n"
underlines = ["", "", ""]
template = "changelog.d/_template.md"
title_format = "## Version [{version}](http://github.com/fedora-infra/webhook-to-fedora-messaging/tree/{version}) - {project_date}"
issue_format = "{issue}"

[[tool.towncrier.type]]
directory = "security"
name = "Security"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[tool.poetry.scripts]
w2fm = "webhook_to_fedora_messaging.cli:main"
